--- a/templates/start.html
+++ b/templates/start.html
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>R-Code Project Game</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/start.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lato&family=Quicksand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../static/index.css">
+    <title>R-code Project</title>
+    <meta charset="UTF-8">
 </head>
 
-<body>
-    <div class ="wrapper">
-        <div class="logoVer">
-            <img src="/static/images/logo%20ver%20wh.webp" alt="Logo">
-        </div>
-        <div class ="button">
-            <a href="{{url_detective_name}}"><button class = "start-bt">START</button></a>
-        </div>
-    </div>
+<body class="start-div">
+        <img class="big-logo" src="../static/images/logo%20ver%20wh.webp" alt="Logo">
+        <button class="button" onclick="location.href='{{ url_detective_name }}'">START</button>
 </body>
 </html>
