--- a/templates/start.html
+++ b/templates/start.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/start.css">
-    <link rel="stylesheet" href="../static/index.css">
+    <link rel="stylesheet" href="../static/css/start.css">
+    <link rel="stylesheet" href="../static/css/index.css">
     <title>R-code Project</title>
     <meta charset="UTF-8">
 </head>
