--- a/static/css/index.css
+++ b/static/css/index.css
@@ -28,8 +28,11 @@ body{
     background-image: url("/static/images/background.webp");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: bottom right;
     min-height: 100vh;
+}
+
+.background-detective{
+    background-image: url("/static/images/start_bg.webp");
 }
 
 .logo{
