--- a/templates/start.html
+++ b/templates/start.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
 </head>
 
-<body class="start-div">
+<body class="start-div background-detective">
         <img class="big-logo" src="/static/images/logo%20ver%20wh.webp" alt="Logo">
         <button class="button" onclick="location.href='http://127.0.0.1:5000/detective_name'">START</button>
 </body>
