link html with url_for() in routes.py

--- a/templates/correct.html
+++ b/templates/correct.html
@@ -36,7 +36,7 @@
         </div>
     </div>
    <form action="#" >
-            <input class="button flex-container-center" type="button" value="NEXT MISSION" onclick="location.href='dashboard'">
+            <input class="button flex-container-center" type="button" value="NEXT MISSION" onclick="location.href='{{ url_dashboard }}'">
    </form>
 </body>
 </html>
