--- a/templates/start.html
+++ b/templates/start.html
@@ -10,6 +10,6 @@
 
 <body class="start-div background-detective">
         <img class="big-logo" src="/static/images/logo%20ver%20wh.webp" alt="Logo">
-        <button class="button" onclick="location.href='detective_name'">START</button>
+        <button class="flex-container-center button" onclick="location.href='detective_name'">START</button>
 </body>
 </html>
