--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -35,7 +35,7 @@
         <div class="text hint-container">{{hint}}</div>
         <form action="http://127.0.0.1:5000/answer" method="POST">
             <input class="input" type="text" name="answer" placeholder="Enter your answer...">
-            <input class="button" type="submit" name="submit" value="SEND">
+            <input class="flex-container-center button" type="submit" name="submit" value="SEND">
         </form>
     </section>
 </main>
