--- a/templates/incorrect.html
+++ b/templates/incorrect.html
@@ -39,7 +39,7 @@
     </div>
 
    <form class="flex-container-center" action="#" >
-            <input class="button" type="button" value="TRY AGAIN" onclick="location.href='dashboard'">
+            <input class="flex-container-center button" type="button" value="TRY AGAIN" onclick="location.href='dashboard'">
    </form>
 </body>
 </html>
