--- a/templates/intro.html
+++ b/templates/intro.html
@@ -14,8 +14,8 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
     </iframe>
     <div class="button-space">
-        <button id="how-to-play" class="exit-button exit-bordeaux-border" type="button" onclick="location.href='howto'">HOW TO PLAY</button>
-        <button id ="skip" class="exit-button exit-bordeaux-border" type="button" onclick="location.href='file'">SKIP</button>
+        <button id="how-to-play" class="exit-button exit-bordeaux-border" type="button" onclick="location.href='howtoplay'">HOW TO PLAY</button>
+        <button id ="skip" class="exit-button exit-bordeaux-border" type="button" onclick="location.href='mission_file'">SKIP</button>
     </div>
 
 </body>
