link html with url_for() for game over and win

--- a/templates/gameOver.html
+++ b/templates/gameOver.html
@@ -32,7 +32,7 @@
     </div>
 
    <form action="#" >
-       <input class="flex-container-center button" type="button" value="PLAY AGAIN" onclick="">
+       <input class="flex-container-center button" type="button" value="PLAY AGAIN" onclick="location.href='{{ url_start }}'">
    </form>
 </body>
 </html>
