--- a/templates/correct.html
+++ b/templates/correct.html
@@ -12,14 +12,20 @@
    <img src="../static/images/logo%20ho.webp" class="logo">
     <div class="popup-container">
         <h2 class="title green">CORRECT!</h2>
-        <p class="text medium">Thank you Agent <span class="player_name">{{name}}</span> (Code No.<span class="player_id">{{number}}</span>) for saving <span class="player_location">{{country}}</span>!<br><br>
+        <p class="text medium">Thank you Agent <span class="player_name">{{name}}</span> for saving <span class="player_location">{{country}}</span>!<br><br>
             Now you have <span class="left_life">{{life}}</span> chances to fail<br>
             with <span class="mission_left">{{missionLeft}}</span> more missions to catch the criminal.
         </p>
         <div class="popup-inside-container">
             <div class="container-ricina">
                 <p>Ricina Status:</p>
-                <div class="ricina-images"></div>
+                <div class="ricina-images">
+                    <img class='ricina-img' src="../static/images/ricina%20fill.png">
+                    <img class='ricina-img' src="../static/images/ricina%20fill.png">
+                    <img class='ricina-img' src="../static/images/ricina%20fill.png">
+                    <img class='ricina-img' src="../static/images/ricina%20fill.png">
+                    <img class='ricina-img' src="../static/images/ricina%20fill.png">
+                </div>
             </div>
             <div class="flex-container-center container container-to-win numbers-to-win">{{missionLeft}}
                 <p class="missions-to-win"> misions to win</p>
