--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/dashboard.css">
     <link rel="stylesheet" href="../static/css/index.css">
+    <script src="../static/js/script.js"></script>
     <title>R-code Project</title>
 </head>
 <body>
@@ -42,7 +43,11 @@
         <div class="container-ricina">
             <p class="small">Ricina Status:</p>
             <div class="ricina-images">
-
+                <img class='ricina-img' src="../static/images/ricina%20fill.png">
+                <img class='ricina-img' src="../static/images/ricina%20fill.png">
+                <img class='ricina-img' src="../static/images/ricina%20fill.png">
+                <img class='ricina-img' src="../static/images/ricina%20fill.png">
+                <img class='ricina-img' src="../static/images/ricina%20fill.png">
             </div>
         </div>
         <div class="flex-container-center container container-to-win">
@@ -53,5 +58,6 @@
         <button class="exit-button exit-bordeaux-border dashboard-button" id="showcountries" onclick="location.href='countries'">SHOW ALL COUNTRIES</button>
         <button class="exit-button exit-bordeaux-border dashboard-button" id="exit" onclick="location.href='exit'">EXIT</button>
 </footer>
+
 </body>
 </html>
