--- a/templates/detective_name.html
+++ b/templates/detective_name.html
@@ -11,7 +11,7 @@
     <img src="../static/images/logo ho.webp" class="logo logo-enter-name">
     <p class="enter-name-text medium">Welcome, agent. To unlock the classified files, please state your code name.</p>
     <form action="/set_name" class="enter-name-div detective_name_button" method="POST">
-        <input class="input" type="text" name="name" placeholder="Enter your name...">
+        <input class="input" type="text" name="name" placeholder="Enter your name..." required>
         <input class="button flex-container-center detective_name_button" type="submit" value="OK">
     </form>
 </body>
