--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -24,7 +24,7 @@
                 <p class="text-location">You are now in:</p>
                 <div class="flex-container-center">
                     <img class="location-image" src="/static/images/location%20icon.webp" alt="An map pin icon">
-                    <p class="flex-end player_location">{{country}}</p>
+                    <p class="flex-end player_location medium">{{country}}</p>
                 </div>
             </div>
         </section>
@@ -51,8 +51,8 @@
             </div>
         </div>
         <div class="flex-container-center container container-to-win">
-                <p class="missions-to-win"> {{ missions }}</p>
-                <p class="missions-to-win"> misions to win</p>
+                <p class="missions-to-win big"> {{ missions }}</p>
+                <p class="missions-to-win "> misions to win</p>
         </div>
         <button class="exit-button exit-bordeaux-border dashboard-button" id="howtoplay" onclick="location.href='howtoplay'">HOW TO PLAY</button>
         <button class="exit-button exit-bordeaux-border dashboard-button" id="showcountries" onclick="location.href='countries'">SHOW ALL COUNTRIES</button>
