--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -1,5 +1,5 @@
 .dashboard {
-    height: 50vh;
+    height: 59vh;
     width: 80vw;
     margin: auto;
     align-self: center;
@@ -8,14 +8,49 @@
     border-radius: 3rem;
     background-color: rgba(45, 89, 81, 0.7);
 }
+.title-dash {
+    text-align: center;
+    font-weight: bold;
+    padding: 1rem;
+    font-size: 28px  !important;
+}
+.logo-dash {
+    margin: 2%;
+    height: 13vh!important;
+    width: auto;
+}
+.badge-dash {
+    width: 22rem !important;
+    height: 6rem !important;
+}
 
+.badge-im-dash {
+    width: 5rem!important;
+    height: 4.5rem!important;
+    margin: 1rem !important;
+}
+.icon-dash {
+    margin-top: 0.2rem !important;
+    width: 2.5rem !important;
+    height: 2.5rem !important;
+}
 form{
     display: flex;
     align-content: center;
 }
 
-.hint-container{
-    height: 18vh;
+.hint-container {
+    height: 350px;
+    width: 845px;
+    margin: auto;
+
+}
+.hint-container img {
+    height: 350px;
+    width: 845px;
+    margin: auto;
+    align-self: center;
+    align-content: center;
 }
 
 .dashboard-button{
@@ -27,6 +62,7 @@ footer{
     display: flex;
     flex-wrap: wrap;
     margin-top: 1rem !important;
+
 }
 
 .container-to-win{
