--- a/templates/exit.html
+++ b/templates/exit.html
@@ -13,7 +13,7 @@
         <p class="title bordeaux">Exit?</p>
         <p class="text medium">Do you really want to exit <br>the R-Code project?</p>
         <form class="flex-container-center" action="#" >
-            <input class="exit-button exit-bordeaux-border" type="button" value="QUIT" onclick="">
+            <input class="exit-button exit-bordeaux-border" type="button" value="QUIT" onclick="location.href='/close_session'">
             <input class="exit-green-border exit-button" type="button" value="BACK TO MISSION" onclick="location.href='dashboard'">
         </form>
     </div>
